--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost/db_blogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.profiles.active=prod
 
-spring.jpa.show-sql=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.packagesToScan=com.generation.blgpessoal.controller
+springdoc.swagger-ui.use-root-path=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Brazil/East
+#/* Linha 3: Define o Caminho para a Documentação do OpenAPI no formato JSON.
+#Linha 4: Define o Caminho para a Documentação do Swagger-ui no formato HTML.
+#Linha 5: Define a ordem em que os Recursos serão exibidos no Swagger-ui.
+#Linha 6: Desabilita a URL padrão do Swagger-ui (Exemplo no site do Swagger).
+#Linha 7: Define o Swagger-ui como a página inicial da aplicação.
+#Linha 8: Define o nome da Package da Camada Controladora (Controller) */
