--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.packagesToScan=com.generation.blgpessoal.controller
+springdoc.packagesToScan=com.generation.blogpessoal.controller
 springdoc.swagger-ui.use-root-path=true
 
 #/* Linha 3: Define o Caminho para a Documentação do OpenAPI no formato JSON.
